<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drinks</string>
    <string name="action_settings">Settings</string>
    <string name="title_drinks">Drinks</string>
    <string name="title_liquors">Liquors</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="detail_ingredients">Ingredients</string>
    <string name="detail_recipe">Recipe</string>
    <string name="network_error">Seems like there is no internet connection</string>
    <string name="drink_detail_loading_failed">Drink loading has failed. Please give it another try.</string>
    <string name="liquor_detail_loading_failed">Liquor loading has failed. Please give it another try.</string>
    <string name="liquor_detail_drinks_loading_failed">Couldn\'t retrieve drinks containing %1$s.</string>
    <string name="retry">Retry</string>
    <string name="list_loading_failed">List loading has failed. Please give it another try.</string>
    <string name="pref_apiendpoint_title">API endpoint</string>
    <string name="pref_apiendpoint_key">pref_apiendpoint</string>
    <string name="pref_versioncode_key">pref_versioncode</string>
    <string name="pref_apiendpoint_default">http://drinks-api.appspot.com/api</string>
    <string name="server_updated">Server updated. Please reload list.</string>
    <string name="drink_detail_wikipedia">See %1$s on Wikipedia</string>
    <string name="liquor_detail_wikipedia">See %1$s on Wikipedia</string>
    <string name="licenses">Content and licenses</string>
    <string name="title_licenses">Content and Licenses</string>
    <string name="title_settings">Settings</string>
    <string name="about">About</string>
    <string name="about_title">About Drinks</string>
    <string name="about_ok">OK</string>
    <string name="about_drinks">Drinks</string>
    <string name="about_description">An Android app for making cocktails.</string>
    <string name="about_madeinfrance">Made in France by Alexandre Masciulli</string>
    <string name="search_title">Search a drink</string>
    <string name="search_hint">Search by name, ingredient&#8230;</string>
    <string name="drinks_empty">No drinks found.</string>
    <string name="liquors_empty">No liquors found</string>
    <string name="liquor_detail_drinks">Drinks containing %1$s</string>
    <string name="report">Report a problem</string>
    <string name="report_default_subject">[Drinks] Problem report</string>
    <string name="report_mail">alexandre.masciulli@gmail.com</string>
    <string name="unknown_version">Unknown version</string>
    <string name="about_dismiss">OK</string>
    <string name="share_drink">Share this drink</string>

</resources>
