<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:title="@string/report"
        app:showAsAction="never" />
    <item
        android:id="@+id/licenses"
        android:title="@string/licenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/retry"
        android:title="@string/retry"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_refresh"
        android:visible="false" />
</menu>
